# trailblazer-rust

./: .gitignore  Cargo.toml  README.md  package.json
src/: lib.rs
src/js/: abstracted.rs  foreign.rs  mod.rs  parser.rs  primative.rs
src/physics/: hitbox.rs  mod.rs  motion.rs  raycast.rs  vec3.rs
src/world/: block.rs  chunk.rs  container.rs  mod.rs
